@@ -5,6 +5,7 @@ Changes for the Labyrinth-DIUtils-ImageMagick
         - reworked Makefile.PL for clarity.
         - various META file updates.
         - updated README.
+        - removed Croak and simplified error handling.
 
 5.04	2011-03-13
 	    - abstracted from Labyrinth, as stand alone plugin.
